// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change selected icon when using selected-icon prop 1`] = `
<div class="van-ellipsis van-tree-select__item van-tree-select__item--active">
  city1
  <i class="van-badge__wrapper van-icon van-icon-foo van-tree-select__selected">
  </i>
</div>
`;

exports[`should render content slot correctly 1`] = `
<div
  class="van-tree-select"
  style="height: 300px;"
>
  <div
    role="tablist"
    class="van-sidebar van-tree-select__nav"
  >
    <div
      role="tab"
      class="van-sidebar-item van-sidebar-item--select van-tree-select__nav-item"
      tabindex="0"
      aria-selected="true"
    >
      <div class="van-badge__wrapper van-sidebar-item__text">
        group1
      </div>
    </div>
  </div>
  <div class="van-tree-select__content">
    Custom Content
  </div>
</div>
`;

exports[`should render empty TreeSelect correctly 1`] = `
<div
  class="van-tree-select"
  style="height: 300px;"
>
  <div
    role="tablist"
    class="van-sidebar van-tree-select__nav"
  >
  </div>
  <div class="van-tree-select__content">
  </div>
</div>
`;

exports[`should render nav badge correctly 1`] = `
<div
  class="van-tree-select"
  style="height: 300px;"
>
  <div
    role="tablist"
    class="van-sidebar van-tree-select__nav"
  >
    <div
      role="tab"
      class="van-sidebar-item van-sidebar-item--select van-tree-select__nav-item"
      tabindex="0"
      aria-selected="true"
    >
      <div class="van-badge__wrapper van-sidebar-item__text">
        group1
        <div class="van-badge van-badge--top-right van-badge--fixed">
          3
        </div>
      </div>
    </div>
  </div>
  <div class="van-tree-select__content">
  </div>
</div>
`;

exports[`should render nav-text slot correctly 1`] = `
<div
  class="van-tree-select"
  style="height: 300px;"
>
  <div
    role="tablist"
    class="van-sidebar van-tree-select__nav"
  >
    <div
      role="tab"
      class="van-sidebar-item van-sidebar-item--select van-tree-select__nav-item"
      tabindex="0"
      aria-selected="true"
    >
      <div class="van-badge__wrapper van-sidebar-item__text">
        Custom nav text, group1
      </div>
    </div>
    <div
      role="tab"
      class="van-sidebar-item van-tree-select__nav-item"
      tabindex="0"
      aria-selected="false"
    >
      <div class="van-badge__wrapper van-sidebar-item__text">
        Custom nav text, group2
      </div>
    </div>
  </div>
  <div class="van-tree-select__content">
    <div class="van-ellipsis van-tree-select__item">
      city1
    </div>
  </div>
</div>
`;
